-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
None
-
6.0
-
None
-
98f4c97768494a86b1598562335f6cf36e4351d7 (qt/qtbase/dev) 4104c7099b0afc7e64505c9e0c61ec62c836bd26 (qt/qtbase/5.15)
The documentation of QCoreApplication::processEvents is not accurate for the glib backend. It states that all pending events are processed, which is not the case, see also
https://bugreports.qt.io/browse/QTBUG-84291
Goal of this item is to improve the situation.
- relates to
-
QTBUG-87728 tst_QGraphicsAnchorLayout::layoutDirection() failed on Ubuntu 20.04 in CI
-
- Reported
-
-
QTBUG-87137 tst_QApplication::sendEventsOnProcessEvents() failed on Ubuntu 20.04/22.04 and RHEL 9
-
- Open
-
-
QTBUG-86970 tst_QItemDelegate::editorKeyPress() failed on ubuntu 20.04
-
- Closed
-
-
QTBUG-84291 tst_QTimer::zeroTimer fails on Ubuntu 20.04
-
- Closed
-
For Gerrit Dashboard: QTBUG-87307 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
316445,8 | Correct processEvents documentation | dev | qt/qtbase | Status: MERGED | +2 | 0 |
318268,1 | modify QEventDispatcherGlib::processEvents to match documentation | dev | qt/qtbase | Status: ABANDONED | +1 | 0 |
320615,2 | Correct processEvents documentation | 5.15 | qt/qtbase | Status: MERGED | +2 | 0 |